Revert "CLC-6475, we risk OutOfMemoryError in scripts not using standard JVM arg setup"
This reverts commit 23ebc6666991996e226f35f7c616e38ed95bf24e.